kubernetes/apps/flux-system/flux-webui/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "flux.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: weave-gitops
          port: 9001
